syntax = "proto3";

package pb;

import "rpc_user.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = ".;pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info : {title : "Simple Bank API";
version : "1.1";
contact : {
name:
  "shui12jiao";
url:
  "https://github.com/shui12jiao/my_simplebank";
email:
  "shui12jiao@example.com";
};
}
;
}
;

service SimpleBank {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post : "/v1/create_user"
      body : "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description : "Create a new user in the bank";
  summary:
    "Create a new user";
  };
}

rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
  option (google.api.http) = {
    post : "/v1/login_user"
    body : "*"
  };
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description : "Login a user in the bank and get access & refresh token";
summary:
  "Login user"
};
}

rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
  option (google.api.http) = {
    post : "/v1/update_user"
    body : "*"
  };
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description : "Update a user in the bank";
summary:
  "Update user"
};
}
}